# comprexxion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  comprexxion.txt  make.bat  make.sh
include/: lexer.cpp  lexer.hpp  loadcfg.cpp  loadcfg.hpp  token.cpp  token.hpp  tree.cpp  tree.hpp
include/parsing/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  tree.cpp  tree.hpp
include/read_config/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  readconfig.cpp  token.cpp  token.hpp  tree.cpp  tree.hpp
include/utilities/: utils.cpp  utils.hpp
src/: main.cpp
